buttons and errors updates

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,6 @@
 
     <string name="vlc_error">Ошибка в VLC</string>
     <string name="confirmation">ОК</string>
+
+    <string name="repeat_new_password_label">Повторите новый пароль</string>
 </resources>
